--- a/webui/heartrepo/template/header.html
+++ b/webui/heartrepo/template/header.html
@@ -44,6 +44,28 @@ a:hover {
 	border:1px solid rgb(120,120,120);
 
 }
+.msg {
+	border:2px dotted black;
+	padding:10px;
+	margin:10px;
+	background-color:#52b9dd;
+	color:white;
+}
+.msg_icon {
+	margin-right:20px;
+}
+.msg_contents {
+	margin:10px;
+	padding:30px;
+	vertical-align:center;
+	background-color:white;
+	color:black;
+	font-weight:bold;
+	font-family:verdana;
+	font-size:14pt;
+
+}
+
 a {
 	text-decoration:none;
 	color:white;
