--- a/webui/heartrepo/template/header.html
+++ b/webui/heartrepo/template/header.html
@@ -1,7 +1,11 @@
 <html>
 	<head>
-		<title>BioRitmo</title>
+		<title>MobileHeartCare - Watching your Heart, so you don't have to</title>
 <style>
+
+	input, select , i, p, td, th, .msg_contents , a, h1, label , .menu {
+		font-family:"OpenSans", Helvetica, Verdana;
+	}
 body {
 	margin:	0px;
 	padding: 0px;
@@ -10,27 +14,47 @@ input:focus, input:hover {
 	color:white;
 	border:2px solid black;
 	background-color:#52b9dd;
-
 }
 input, select {
 	margin-top:5px;
 	margin-bottom:5px;
 	margin-left:2px;
 	margin-right:0px;
-	font-family:verdana;
 	font-size:14pt;
 	color:black;
 	border:2px solid #52b9dd;
 	background-color:white;
 	border-radius:4px;
-}	
+}
+
+i {
+	font-size:14pt;
+	color:black;
+	margin-left:50px;
+	display:inline-block;
+	margin-bottom:50px;
+}
+p{
+	margin:5px;
+	font-size:12pt;
+	color:black;
+	padding:10px;
+	border:2px dotted #52b9dd;
+	border-radius:2px;
+	background-color:rgb(250, 250, 250);
+}
+
+input[type=submit] {
+	color:white;
+	border:2px solid rgb(30,30,30);
+	background-color:#52b9dd;
+
+}
 td {
 	color:#52b9dd;
-	font-family:verdana;
 	font-size:10pt;
 }
 th {
-	font-family:verdana;
 	background-color:white;
 	font-size:14pt;
 	font-weight:normal;
@@ -61,7 +85,6 @@ a:hover {
 	background-color:white;
 	color:black;
 	font-weight:bold;
-	font-family:verdana;
 	font-size:14pt;
 
 }
@@ -70,7 +93,6 @@ a {
 	text-decoration:none;
 	color:white;
 	background-color:#52b9dd;
-	font-family:verdana;
 	font-size:12pt;
 	display:inline-block;
 	margin:2px;
@@ -83,14 +105,12 @@ a {
 	border-radius:10px;
 }
 h1 {
-	font-family:verdana;
 	font-size:40pt;
 	color:rgb(200,200,200);
 }
 label {
 	display:inline-block;
 	padding-top:20px;
-	font-family:futura,verdana;
 	font-size:14pt;
 	color:rgb(150,150,150);
 
@@ -102,7 +122,6 @@ label {
 .menu {
 	background-color:black;
 	color:white;
-	font-family:verdana;
 	font-size:14pt;
 	padding:3px;
 }
@@ -118,10 +137,13 @@ hr {
 .footer {
 	color:#52b9dd;
 }
+.wrapper {
+	padding-left:120px;
+	padding-right:120px;
 
+}
 
 </style>
 	</head>
 	<body>
-
 
