--- a/android/res/layout/activity_login.xml
+++ b/android/res/layout/activity_login.xml
@@ -2,7 +2,7 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="#A4A4A4" >
+        android:background="#FFF" >
 
 
 
@@ -11,11 +11,10 @@
 	    android:layout_width="fill_parent"
 	    android:layout_height="fill_parent"
 	    android:fillViewport="true"
-	    android:layout_marginLeft="10dip"
-	    android:layout_marginRight="10dip"
-	    android:layout_marginBottom="10dip"
-	    android:layout_marginTop="10dip"
-
+	    android:layout_marginLeft="10dp"
+	    android:layout_marginRight="10dp"
+	    android:layout_marginBottom="10dp"
+	    android:layout_marginTop="10dp"
 	    >
         
         <TableLayout
@@ -40,8 +39,8 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:layout_marginTop="10dip"
-                        android:layout_marginLeft="10dip"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp"
                         
                         android:text="Login"
                         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -54,15 +53,15 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="0dip" >
+                android:layout_marginLeft="0dp" >
                     
                     <View
                 android:id="@+id/viewUno"
                 android:layout_width="fill_parent"
-                android:layout_height="1dip"
+                android:layout_height="1dp"
                                            
                 android:background="#4B088A" 
-                android:layout_marginTop="5dip"
+                android:layout_marginTop="5dp"
                 android:visibility="invisible"
                 />
                    
@@ -73,15 +72,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginTop="20dip" >
+                android:layout_marginTop="20dp" >
 
                     <EditText
                         android:id="@+id/editText1"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dip"
-                        android:layout_marginLeft="10dip"
-                        android:layout_marginRight="10dip"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
                         android:layout_weight="1"
                         android:hint="Email"
                         android:ems="10"
@@ -103,9 +102,9 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:hint="Password"
-                        android:layout_marginTop="30dip"
-                        android:layout_marginLeft="10dip"
-                        android:layout_marginRight="10dip"
+                        android:layout_marginTop="30dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
                         android:ems="10"
                         android:inputType="textPassword" 
                         
@@ -132,7 +131,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_marginBottom="10dp"
-                        android:layout_marginTop="50dip"
+                        android:layout_marginTop="50dp"
                         android:layout_marginLeft="10dp"
                         android:text="Sign In" />
 
