--- a/android/res/layout/activity_splash.xml
+++ b/android/res/layout/activity_splash.xml
@@ -2,7 +2,7 @@
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:background="#5B318C"
+        android:background="#2AAFD9"
          >
 
         <ImageView
@@ -14,6 +14,6 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/splash" />
         
 </RelativeLayout>
