--- a/android/res/layout/activity_login.xml
+++ b/android/res/layout/activity_login.xml
@@ -4,8 +4,6 @@
         android:layout_height="fill_parent"
         android:background="#FFF" >
 
-
-
       <ScrollView
 	    android:id="@+id/scroller"
 	    android:layout_width="fill_parent"
@@ -26,7 +24,7 @@
             android:background="#ffffff" 
             >
 
-            <TableRow
+           <TableRow
                 android:id="@+id/tableRow1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -34,18 +32,13 @@
            
                  >
 
-                    <TextView
-                        android:id="@+id/textView1"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginLeft="10dp"
-                        
-                        android:text="Login"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
+                <ImageView
+                    android:id="@+id/imageView1"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
+                    android:src="@drawable/up_login" />
 
-                    
+
 
                 </TableRow>
 
