--- a/android/res/layout/activity_main.xml
+++ b/android/res/layout/activity_main.xml
@@ -12,8 +12,12 @@
 		<LinearLayout
 		    android:id="@+id/graph2"
 		    android:layout_width="fill_parent"
-		    android:layout_height="250dip"
-		    android:orientation="vertical" />
+		    android:layout_height="250dp"
+		    android:orientation="vertical" 
+		    android:layout_marginTop="10dp"
+		    android:layout_marginLeft="10dp"
+		    android:layout_marginRight="10dp"
+		    />
 
 		 <TextView
 		        android:id="@+id/textMsg"
