--- a/webui/heartrepo/template/start.html
+++ b/webui/heartrepo/template/start.html
@@ -6,4 +6,5 @@ their heart's bpm and heart health over time, so Doctors can
 have more data (and better data), which whould help have a Higher 
 Quality of Life and a higher Quality of Heart Care.</p>
 <p>Hence the name, MobileHeartCare</p>
-
+<br/>
+<a href='?ac=register'>Register Now</a>
