--- a/android/res/layout/activity_login.xml
+++ b/android/res/layout/activity_login.xml
@@ -34,9 +34,9 @@
 
                 <ImageView
                     android:id="@+id/imageView1"
-                    android:layout_width="150dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="150dp"
-                    android:src="@drawable/up_login" />
+                    android:src="@drawable/login" />
 
 
 
@@ -123,9 +123,11 @@
                         android:layout_width="130dp"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
+                        android:background="@drawable/round_button"
                         android:layout_marginBottom="10dp"
                         android:layout_marginTop="50dp"
                         android:layout_marginLeft="10dp"
+                        android:onClick="login"
                         android:text="Sign In" />
 
                 </RelativeLayout>
