--- a/android/res/layout/activity_splash.xml
+++ b/android/res/layout/activity_splash.xml
@@ -14,6 +14,6 @@
             android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginRight="20dp"
-            android:src="@drawable/splash" />
+            android:src="@drawable/splash2" />
         
 </RelativeLayout>
