--- a/webui/heartrepo/template/header.html
+++ b/webui/heartrepo/template/header.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>MobileHeartCare - Watching your Heart, so you don't have to</title>
+		
 <style>
 
 input, select , i, p, td, th, .msg_contents , a, h1, label , .menu {
@@ -166,6 +167,10 @@ hr {
 	clear:both;
 	margin-top:200px;
 }
+.menu {
+	background-color:
+}
+
 </style>
 	</head>
 	<body>
