--- a/webui/heartrepo/template/info-rates.html
+++ b/webui/heartrepo/template/info-rates.html
@@ -1,4 +1,4 @@
-<h1>Average target Rates</h1>
+<h1>Average Maximum Target Rates</h1>
 <table border=1 cellspacing=0 cellpadding=0 class=dataset>
 <tr><th>Age</th><th>Target HR Zone 50-85%</th><th>Average Maximum Heart Rate, 100%</th></tr>
 <tr><td>20 years </td><td>100-170 beats per minute</td><td>200 beats per minute</td></tr>
@@ -12,3 +12,15 @@
 <tr><td>65 years</td><td>78-132 beats per minute</td><td>155 beats per minute</td></tr>
 <tr><td>70 years</td><td>75-128 beats per minute</td><td>150 beats per minute</td></tr>
 </table>
+
+<h1>Resting Target Rates</h1>
+<table border=1 cellspacing=0 cellpadding=0 class=dataset>
+<tr><th>Age or fitness level</th><th>Beats per minute (bpm)</th></tr>
+<tr><td>Babies to age 1:</td><td>100-160</td></tr>
+<tr><td>Children ages 1 to 10:</td><td>70-120</td></tr>
+<tr><td>Children ages 11 to 17:</td><td>60-100</td></tr>
+<tr><td>Adults:</td><td>60-100</td></tr>
+<tr><td>Well-conditioned athletes:</td><td>40-60</td></tr>
+</table>
+
+
