--- a/webui/heartrepo/template/header.html
+++ b/webui/heartrepo/template/header.html
@@ -76,7 +76,7 @@ th {
 	font-size:14pt;
 	font-weight:normal;
 	background-color:rgb(209, 113, 126);
-	white-space:nowrap;
+/*	white-space:nowrap;*/
 	padding:4px;
 	border:1px solid #bfbfbf;
 }
