--- a/webui/heartrepo/template/start.html
+++ b/webui/heartrepo/template/start.html
@@ -1,7 +1,7 @@
 <h1>MobileHeartCare</h1>
 <i>Watching your Heart, so you don't have to.</i><br/>
 
-<img src="./media/infografia.jpg" />
+<img src="./media/infografia.[#lang].jpg" />
 
 <p>Our Purpose, Is to help patients easily keep track of
 their heart's bpm and heart health over time, so Doctors can 
