--- a/android/res/layout/activity_main.xml
+++ b/android/res/layout/activity_main.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
+	android:layout_height="fill_parent"
+	android:background="#A4A4A4"
+	>
 	
 	<LinearLayout
 		android:orientation="vertical"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content">
-
 		
 		<LinearLayout
 		    android:id="@+id/graph2"
@@ -24,9 +25,11 @@
 		        android:layout_width="wrap_content"
 		        android:layout_height="wrap_content"
 		        android:layout_marginTop="57dp"
-		        android:text="Cosito desde Arduino: "
-		        android:textAppearance="?android:attr/textAppearanceLarge" />
-		
+		        android:layout_marginRight="10dp"
+		        android:layout_marginLeft="10dp"
+		        android:text="This is fun for your heart .."		       
+		        android:textSize="20sp"
+		        android:textAppearance="?android:attr/textAppearanceLarge" />		
 		
 	</LinearLayout>
 	
